# multi-robot-slam

install/: local_setup.sh  setup.sh
install/multi_robot_exploration/lib/multi_robot_exploration/: collision_avoider.py  exploration_coordinator.py  task_allocator.py
install/multi_robot_exploration/share/ament_index/resource_index/package_run_dependencies/: multi_robot_exploration
install/multi_robot_exploration/share/ament_index/resource_index/parent_prefix_path/: multi_robot_exploration
install/multi_robot_exploration/share/multi_robot_exploration/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/multi_robot_exploration/share/multi_robot_exploration/config/: nav2_params.yaml
install/multi_robot_exploration/share/multi_robot_exploration/launch/: exploration.launch.py
install/multi_robot_slam/lib/multi_robot_slam/: map_merger.py  pose_graph_optimizer.py  slam_coordinator.py  tf_publisher.py
install/multi_robot_slam/share/multi_robot_slam/: local_setup.dsv  package.dsv  package.ps1  package.sh  package.xml
install/multi_robot_slam/share/multi_robot_slam/cmake/: ament_cmake_export_include_directories-extras.cmake  export_multi_robot_slam__rosidl_generator_cppExport.cmake  export_multi_robot_slam__rosidl_generator_pyExport-noconfig.cmake  export_multi_robot_slam__rosidl_generator_pyExport.cmake  export_multi_robot_slam__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  export_multi_robot_slam__rosidl_typesupport_fastrtps_cppExport.cmake  multi_robot_slamConfig.cmake  multi_robot_slam__rosidl_typesupport_cExport.cmake  multi_robot_slam__rosidl_typesupport_cppExport-noconfig.cmake  multi_robot_slam__rosidl_typesupport_cppExport.cmake  multi_robot_slam__rosidl_typesupport_introspection_cppExport-noconfig.cmake  multi_robot_slam__rosidl_typesupport_introspection_cppExport.cmake
install/multi_robot_slam/share/multi_robot_slam/config/: slam_params.yaml
install/multi_robot_slam/share/multi_robot_slam/launch/: multi_robot_slam.launch.py
install/multi_robot_slam/share/multi_robot_slam/msg/: PoseGraph.msg  PoseGraphNode.idl
install/robot_description/share/robot_description/: local_setup.sh  package.sh  package.xml
install/robot_description/share/robot_description/config/: multi_robot.rviz
install/robot_description/share/robot_description/launch/: bringup.launch.py  multi_robot_gazebo.launch.py
install/robot_description/share/robot_description/urdf/: base.urdf.xacro
install/robot_description/share/robot_description/urdf/actuator/: caster.urdf.xacro  wheel.urdf.xacro
install/robot_description/share/robot_description/urdf/plugins/: gazebo_control_plugin.xacro  gazebo_sensor_plugin.xacro
install/uwb_simulation/lib/uwb_simulation/: uwb_range_publisher.py  uwb_range_simulator.py
install/uwb_simulation/share/uwb_simulation/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/uwb_simulation/share/uwb_simulation/cmake/: export_uwb_simulation__rosidl_generator_cExport.cmake  export_uwb_simulation__rosidl_generator_pyExport.cmake  export_uwb_simulation__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  export_uwb_simulation__rosidl_typesupport_fastrtps_cppExport.cmake  uwb_simulation__rosidl_typesupport_cExport.cmake  uwb_simulation__rosidl_typesupport_cppExport.cmake  uwb_simulation__rosidl_typesupport_introspection_cExport.cmake  uwb_simulation__rosidl_typesupport_introspection_cppExport-noconfig.cmake
install/uwb_simulation/share/uwb_simulation/msg/: UwbRangeArray.idl
log/: latest_build
src/: README.md
src/multi_robot_exploration/: CMakeLists.txt  package.xml
src/multi_robot_exploration/src/: collision_avoider.py  exploration_coordinator.py  frontier_explorer.py  simple_explorer.py  task_allocator.py
src/multi_robot_slam/: CMakeLists.txt  package.xml
src/multi_robot_slam/config/: slam_params.yaml
src/multi_robot_slam/launch/: multi_robot_slam.launch.py
src/multi_robot_slam/msg/: PoseGraphNode.msg
src/multi_robot_slam/src/: map_merger.py  pose_graph_optimizer.py  slam_coordinator.py  tf_publisher.py
src/robot_description/: CMakeLists.txt  package.xml
src/robot_description/launch/: multi_robot_gazebo.launch.py
src/robot_description/urdf/: common_inertial.xacro  explorer_robot.urdf.xacro
src/robot_description/urdf/plugins/: gazebo_control_plugin.xacro  gazebo_sensor_plugin.xacro
src/robot_description/urdf/sensor/: imu.urdf.xacro  laser.urdf.xacro  uwb.urdf.xacro
src/robot_description/world/: exploration_world.world
src/uwb_simulation/: CMakeLists.txt  package.xml
src/uwb_simulation/launch/: uwb_simulation.launch.py
src/uwb_simulation/msg/: UwbRange.msg
src/uwb_simulation/src/: uwb_range_publisher.py  uwb_range_simulator.py
(+61 files in other folders)
